# unai

./: .gitignore  CHALLENGE.md  CHANGELOG.md  CONTRIBUTING.md  CURSOR.md  LICENSE  Makefile  README.md  WARP.md
.githooks/: pre-push
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  false_positive.md  new-rule.md
.github/workflows/: ci.yml  release.yml
cli/: Cargo.toml  build.rs
cli/src/: config.rs  detector.rs  diff.rs  error.rs  main.rs  rules.rs  tests.rs
cli/src/rules/: code.rs  commit.rs  ignore.rs  mod.rs  structural.rs  text.rs
cli/tests/: integration.rs
cli/tests/corpus/: human_1.txt  human_10.txt  human_2.txt  human_3.txt  human_4.txt  human_5.txt  human_6.txt  human_7.txt  human_8.txt  human_9.txt  llm_1.txt  llm_10.txt  llm_2.txt  llm_3.txt  llm_4.txt  llm_5.txt  llm_6.txt  llm_7.txt  llm_8.txt  llm_9.txt
prompts/: agents.md  claude-code.md  cursor.mdc  opencode.md  system-prompt.md
rules/: api-design.md  code-comments.md  commits.md  docstrings.md  error-handling.md  llm-tells.md  naming.md  tests.md  text.md
scripts/: build-all.sh  release.sh
