[package]
name = "unai"
version = "0.3.0"
edition = "2021"
description = "Detect and remove LLM-isms from text, code comments, and commit messages"
license = "MIT"
repository = "https://github.com/HugoLopes45/unai"
keywords = ["linter", "ai", "style", "llm", "text"]
categories = ["command-line-utilities", "text-processing"]
readme = "../README.md"
exclude = [".github/", "prompts/", "rules/", ".forge/"]
rust-version = "1.75"

[[bin]]
name = "unai"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
thiserror = "1.0"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
similar = "2.4"
anstyle = "1.0"

[dev-dependencies]
tempfile = "3"
